# ToyBrickTest

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/toybricktest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/toybricktest/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/toybricktest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
xindalib/: CMakeLists.txt  build.gradle
xindalib/src/androidTest/java/com/example/xindalib/: ExampleInstrumentedTest.java
xindalib/src/main/: AndroidManifest.xml
xindalib/src/main/cpp/: Algorithm_jni.cpp  mobilenet_eye.cpp  mobilenet_eye.h
xindalib/src/main/java/xindasdk/: XDSDK.java
xindalib/src/main/res/values/: strings.xml
xindalib/src/test/java/com/example/xindalib/: ExampleUnitTest.java
